# midicontrols

./: .coveragerc  .gitignore  .travis.yml  Example.ipynb  MANIFEST.in  README.md  appveyor.yml  codecov.yml  install.json  ipymidicontrols.json  package.json  pyproject.toml  pytest.ini  readthedocs.yml  setup.py  tsconfig.json  webpack.config.js
css/: widget.css
docs/: Makefile  environment.yml  make.bat
docs/source/: conf.py  develop-install.rst  index.rst  installing.rst
docs/source/examples/: example.nblink  index.rst
examples/: Example.ipynb  introduction.ipynb
ipymidicontrols/: __init__.py  _frontend.py  _version.py  example.py  xtouchmini.py
ipymidicontrols/nbextension/: __init__.py  extension.js
ipymidicontrols/nbextension/static/: extension.js
ipymidicontrols/tests/: conftest.py  test_example.py  test_nbextension_path.py  test_xtouchmini.py
src/: enableMIDI.ts  extension.ts  index.ts  midi.ts  plugin.ts  version.ts  widget.ts
src/xtouchmini/: button.ts  buttongroup.ts  disposable.ts  fader.ts  index.ts  mcubutton.ts  mcufader.ts  mcuknob.ts  mcuxtouchmini.ts  rotary.ts  utils.ts  xtouchmini.ts
